# unihousing

./: .gitignore  README.md
.github/workflows/: deploy-prod.yml  deploy.yml
backend/: README.md  go.mod  main.go
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
scraper/: Makefile  README.md  deploy.sh  generate_requirements.py  main.py  pyproject.toml  queue_processor.py  requirements.txt  template.yaml
scraper/builder/: __init__.py  builder.py  checksum.py  constants.py  description_extractor.py  main.py  parse_listings.py  pyproject.toml
scraper/builder/test/: basic_parsing.py  generate.py
scraper/builder/test/html/: 101772.txt  101922.txt  101927.txt  101947.txt  101953.txt  101975.txt
scraper/crawler/: __init__.py  crawler.py  main.py  pyproject.toml
scraper/lambdas/: __init__.py
scraper/shared/: __init__.py  mongo.py
workflows/: deploy.yml
