[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "bson>=0.5.10",
    "python-dotenv>=1.0.0",
    "pymongo>=4.6.0",
    "boto3>=1.28.0",
    "requests>=2.32.5",
]

[tool.setuptools]
packages = ["builder", "crawler", "lambdas", "shared"]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a26",
    "types-requests>=2.32.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"main.py" = ["ARG001"]  # unused Lambda handler parameters
"queue_processor.py" = ["ARG001"]  # unused Lambda handler parameters

[tool.ty]
# ty configuration - using default strict settings
